Add SEO meta tags and favicons

--- a/Pages/history.html
+++ b/Pages/history.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover key milestones in physics history from ancient Greece to modern science. Learn how great minds shaped our understanding of the universe.">
+    <meta name="keywords" content="physics history, scientific discoveries, famous physicists, history of science, physics timeline">
+    <meta name="author" content="Onur Yavan, Christian Zall">
+    <meta property="og:title" content="History of Physics | PhysiXplore">
+    <meta property="og:description" content="Discover key milestones in physics history from ancient Greece to modern science. Learn how great minds shaped our understanding of the universe.">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:image" content="../Images/og-physixplore.png">
+    <link rel="icon" href="../Images/Favicons/favicon.ico">
+    <link rel="icon" href="../Images/Favicons/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="../Images/Favicons/apple-touch-icon.png"> 
     <link rel="stylesheet" href="../Styles/style.css">
     <script defer src="../Scripts/mobileNav.js"></script>
-    <title>Physics History</title>
+    <title>History of Physics | PhysiXplore</title>
 </head>
 <body>
     <nav id="nav-mobile">
