--- a/Pages/quiz.html
+++ b/Pages/quiz.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Test your physics knowledge with our interactive quiz covering gravity, pendulum motion, and physics history. Challenge yourself and learn more!">
+    <meta name="keywords" content="physics quiz, test knowledge, physics questions, interactive quiz, science test">
+    <meta name="author" content="Onur Yavan, Christian Zall">
+    <meta property="og:title" content="Physics Knowledge Quiz | PhysiXplore">
+    <meta property="og:description" content="Test your physics knowledge with our interactive quiz covering gravity, pendulum motion, and physics history. Challenge yourself and learn more!">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:image" content="../Images/og-physixplore.png">
+    <link rel="icon" href="../Images/Favicons/favicon.ico">
+    <link rel="icon" href="../Images/Favicons/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="../Images/Favicons/apple-touch-icon.png">     
     <link rel="stylesheet" href="../Styles/style.css">
     <script defer src="../Scripts/quiz.js"></script>
     <script defer src="../Scripts/mobileNav.js"></script>
-    <title>Test Your Knowledge</title>
-    <meta name="description" content="Test your physics knowledge with an interactive quiz about the key history milestones of physics, gravity, pendulum. Perfect for students and beginners.">
-    <meta name="keywords" content="physics quiz, Newton, gravity, gravitation, Isaac Newton, pendulum, science quiz, physics learning">
+    <title>Physics Knowledge Quiz | PhysiXplore</title>
 </head>
 <body>
     <nav id="nav-mobile">
