--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore physics interactively: Learn about gravity, pendulum motion, and Newton's discoveries. Test your knowledge with our physics quiz.">
+    <meta name="keywords" content="physics, gravity, pendulum, Newton, physics education, interactive learning, physics quiz">
+    <meta name="author" content="Onur Yavan, Christian Zall">
+    <meta property="og:title" content="Physics Learning Platform | PhysiXplore">
+    <meta property="og:description" content="Explore physics interactively: Learn about gravity, pendulum motion, and Newton's discoveries. Test your knowledge with our physics quiz.">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:image" content="./Images/og-physixplore.png">
+    <link rel="icon" href="./Images/Favicons/favicon.ico">
+    <link rel="icon" href="./Images/Favicons/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./Images/Favicons/apple-touch-icon.png">   
     <link rel="stylesheet" href="./Styles/style.css">
     <script defer src="./Scripts/script.js" type="text/javascript"></script>
     <script defer src="./Scripts/mobileNav.js" type="text/javascript"></script>
-    <title>PhysiXplore</title>
+    <title>PhysiXplore - Interactive Physics Education Hub</title>
 </head>
 <body>
     <nav id="nav-mobile">
@@ -42,22 +53,22 @@
 
         <main id="gallery-container">
             <div class="gallery-item">
-                <img src="./Images/sun-earth-moon-geometry.svg" class="gallery-item-img" id="gallery-history-page">
+                <img src="./Images/sun-earth-moon-geometry.svg" alt="diagram of solar eclipse geometry with sun, moon and earth" class="gallery-item-img" id="gallery-history-page">
                 <a href="./Pages/history.html" class="gallery-page-link" id="test">Read about key<br>Physical Events</a>
             </div>
 
             <div class="gallery-item">
-                <img src="./Images/isaac-newton-physicist-portrait.svg" class="gallery-item-img" id="gallery-gravity-page">
+                <img src="./Images/isaac-newton-physicist-portrait.svg" alt="Isaac Newton portrait engraving with curly wig" class="gallery-item-img" id="gallery-gravity-page">
                 <a href="./Pages/gravity.html" class="gallery-page-link">Newton's<br>Gravitational Law</a>
             </div>
 
             <div class="gallery-item">
-                <img src="./Images/pendulum-mechanical-clock-physics.svg" class="gallery-item-img" id="gallery-pendulum-page">
+                <img src="./Images/pendulum-mechanical-clock-physics.svg" alt="Pendulum clock with Roman numerals" class="gallery-item-img" id="gallery-pendulum-page">
                 <a href="./Pages/pendulum.html" class="gallery-page-link">The Pendulum<br>in Motion</a>
             </div>
 
             <div class="gallery-item">
-                <img src="./Images/math-formulas-sketch-handwritten.svg" class="gallery-item-img" id="gallery-quiz-page">
+                <img src="./Images/math-formulas-sketch-handwritten.svg" alt="hand-drawn mathematical formulas with coordinate systems and algebraic equations" class="gallery-item-img" id="gallery-quiz-page">
                 <a href="./Pages/quiz.html" class="gallery-page-link">Test Your<br>Knowledge</a>
             </div>
         </main>
