--- a/Pages/gravity.html
+++ b/Pages/gravity.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn Newton's law of universal gravitation with interactive examples. Understand gravitational force, mass, and distance relationships explained simply.">
+    <meta name="keywords" content="gravity, Newton's law, gravitational force, universal gravitation, physics laws">
+    <meta name="author" content="Onur Yavan, Christian Zall">
+    <meta property="og:title" content="Newton's Law of Gravity | PhysiXplore">
+    <meta property="og:description" content="Learn Newton's law of universal gravitation with interactive examples. Understand gravitational force, mass, and distance relationships explained simply.">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:image" content="../Images/og-physixplore.png">
+    <link rel="icon" href="../Images/Favicons/favicon.ico">
+    <link rel="icon" href="../Images/Favicons/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="../Images/Favicons/apple-touch-icon.png">     
     <link rel="stylesheet" href="../Styles/style.css">
     <script defer src="../Scripts/gravity.js" type="text/javascript"></script>
     <script defer src="../Scripts/mobileNav.js"></script>
-    <title>Newton's Apple – Gravity explained simply | Interactive physics</title>
-    <meta name="description" content="Interactive website about Newton’s law of gravitation. Learn physics with explanations, formulas, images, and a quiz.">
-    <meta name="keywords" content="Newton, gravity, gravitation, physics, Isaac Newton, force of gravity, pendulum, physics learning">
-    <meta name="author" content="Newton's Apple">
+    <title>Newton's Apple – Gravity explained simply | PhysiXplore</title>
 </head>
 <body>
     <nav id="nav-mobile">
