--- a/Pages/gravity.html
+++ b/Pages/gravity.html
@@ -3,21 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO Meta Tags -->
+    <title>Newton's Apple – Gravity explained simply | PhysiXplore</title>
     <meta name="description" content="Learn Newton's law of universal gravitation with interactive examples. Understand gravitational force, mass, and distance relationships explained simply.">
     <meta name="keywords" content="gravity, Newton's law, gravitational force, universal gravitation, physics laws">
     <meta name="author" content="Onur Yavan, Christian Zall">
+
+    <!-- Open Graph Tags -->
     <meta property="og:title" content="Newton's Law of Gravity | PhysiXplore">
     <meta property="og:description" content="Learn Newton's law of universal gravitation with interactive examples. Understand gravitational force, mass, and distance relationships explained simply.">
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="PhysiXplore">
     <meta property="og:locale" content="en_US">
     <meta property="og:image" content="../Images/og-physixplore.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Banner image for PhysiXplore, an interactive physics learning website, showing sections The Pendulum, Gravity, History and Quiz">
+    
+    <!-- Favicons -->
     <link rel="icon" href="../Images/Favicons/favicon.ico">
     <link rel="icon" href="../Images/Favicons/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="../Images/Favicons/apple-touch-icon.png">     
+
+    <!-- Stylesheets & Scripts -->
     <link rel="stylesheet" href="../Styles/style.css">
     <script defer src="../Scripts/gravity.js" type="text/javascript"></script>
     <script defer src="../Scripts/mobileNav.js"></script>
-    <title>Newton's Apple – Gravity explained simply | PhysiXplore</title>
 </head>
 <body>
     <nav id="nav-mobile">
