--- a/Pages/history.html
+++ b/Pages/history.html
@@ -3,20 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO Meta Tags -->
+    <title>History of Physics | PhysiXplore</title>
     <meta name="description" content="Discover key milestones in physics history from ancient Greece to modern science. Learn how great minds shaped our understanding of the universe.">
     <meta name="keywords" content="physics history, scientific discoveries, famous physicists, history of science, physics timeline">
     <meta name="author" content="Onur Yavan, Christian Zall">
+
+    <!-- Open Graph Tags -->
     <meta property="og:title" content="History of Physics | PhysiXplore">
     <meta property="og:description" content="Discover key milestones in physics history from ancient Greece to modern science. Learn how great minds shaped our understanding of the universe.">
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="PhysiXplore">
     <meta property="og:locale" content="en_US">
     <meta property="og:image" content="../Images/og-physixplore.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Banner image for PhysiXplore, an interactive physics learning website, showing sections The Pendulum, Gravity, History and Quiz">
+
+    <!-- Favicons -->
     <link rel="icon" href="../Images/Favicons/favicon.ico">
     <link rel="icon" href="../Images/Favicons/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="../Images/Favicons/apple-touch-icon.png"> 
+
+    <!-- Stylesheets & Scripts -->
     <link rel="stylesheet" href="../Styles/style.css">
     <script defer src="../Scripts/mobileNav.js"></script>
-    <title>History of Physics | PhysiXplore</title>
 </head>
 <body>
     <nav id="nav-mobile">
