--- a/index.html
+++ b/index.html
@@ -3,21 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO Meta Tags -->
+    <title>PhysiXplore - Interactive Physics Education Hub</title>
     <meta name="description" content="Explore physics interactively: Learn about gravity, pendulum motion, and Newton's discoveries. Test your knowledge with our physics quiz.">
     <meta name="keywords" content="physics, gravity, pendulum, Newton, physics education, interactive learning, physics quiz">
     <meta name="author" content="Onur Yavan, Christian Zall">
+
+    <!-- Open Graph Tags -->
     <meta property="og:title" content="Physics Learning Platform | PhysiXplore">
     <meta property="og:description" content="Explore physics interactively: Learn about gravity, pendulum motion, and Newton's discoveries. Test your knowledge with our physics quiz.">
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="PhysiXplore">
     <meta property="og:locale" content="en_US">
     <meta property="og:image" content="./Images/og-physixplore.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Banner image for PhysiXplore, an interactive physics learning website, showing sections The Pendulum, Gravity, History and Quiz">
+
+    <!-- Favicons -->
     <link rel="icon" href="./Images/Favicons/favicon.ico">
     <link rel="icon" href="./Images/Favicons/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="./Images/Favicons/apple-touch-icon.png">   
+    <link rel="apple-touch-icon" href="./Images/Favicons/apple-touch-icon.png"> 
+    
+    <!-- Stylesheets & Scripts -->
     <link rel="stylesheet" href="./Styles/style.css">
     <script defer src="./Scripts/script.js" type="text/javascript"></script>
     <script defer src="./Scripts/mobileNav.js" type="text/javascript"></script>
-    <title>PhysiXplore - Interactive Physics Education Hub</title>
 </head>
 <body>
     <nav id="nav-mobile">
