Rename elements on quiz.html

--- a/Pages/quiz.html
+++ b/Pages/quiz.html
@@ -66,13 +66,13 @@
 
         <main class="grid-item-main" id="quiz-page-main">
 
-            <section class="quiz">
-                <h2 id="question">Question goes here</h2>
+            <section class="quiz-container">
+                <h2 id="quiz-question">Question goes here</h2>
                 <div id="answer-buttons">
-                    <button class="btn">Answer 1</button>
-                    <button class="btn">Answer 2</button>
-                    <button class="btn">Answer 3</button>
-                    <button class="btn">Answer 4</button>
+                    <button class="answer-btn">Answer 1</button>
+                    <button class="answer-btn">Answer 2</button>
+                    <button class="answer-btn">Answer 3</button>
+                    <button class="answer-btn">Answer 4</button>
                 </div>
                 <button id="next-btn">Next</button>
             </section>
