Make minor accessibility improvements

--- a/Pages/gravity.html
+++ b/Pages/gravity.html
@@ -29,7 +29,7 @@
 
     <!-- Stylesheets & Scripts -->
     <link rel="stylesheet" href="../Styles/style.css">
-    <script defer src="../Scripts/gravity.js" type="text/javascript"></script>
+    <script defer src="../Scripts/gravity.js"></script>
     <script defer src="../Scripts/mobileNav.js"></script>
 </head>
 <body>
