--- a/Pages/pendulum.html
+++ b/Pages/pendulum.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -101,7 +101,7 @@
                 </div>
             </section>
 
-            <section id="pendulum-wrapper">
+            <div id="pendulum-wrapper">
                 <div id="pendulum-test">
                     <div id="pendulum-container">
                         <svg id="pendulum-svg" viewBox="0 0 200 200">
@@ -130,7 +130,7 @@
                     <button class="pendulum-control-button" id="startBtn">▶ Start</button>
                     <button class="pendulum-control-button" id="resetBtn">↺ Reset</button>
                 </div>
-            </section>
+            </div>
 
         </main>
 
