--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,8 +29,8 @@
     
     <!-- Stylesheets & Scripts -->
     <link rel="stylesheet" href="./Styles/style.css">
-    <script defer src="./Scripts/script.js" type="text/javascript"></script>
-    <script defer src="./Scripts/mobileNav.js" type="text/javascript"></script>
+    <script defer src="./Scripts/script.js"></script>
+    <script defer src="./Scripts/mobileNav.js"></script>
 </head>
 <body>
     <nav id="nav-mobile">
