Improve readability and obsolete stylings

--- a/Pages/history.html
+++ b/Pages/history.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,7 +40,7 @@
     </nav>
 
     <div class="grid-container">
-
+        
         <header class="header">
             <nav class="nav-box" id="nav-box-left">
                 <a href="../index.html" class="highlight-text">Home</a>
@@ -182,6 +182,5 @@
         </main>
 
     </div>
-    
 </body>
 </html>
