--- a/Pages/pendulum.html
+++ b/Pages/pendulum.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -101,8 +101,8 @@
                 </div>
             </section>
 
-            <div id="pendulum-wrapper">
-                <div id="pendulum-test">
+            <div id="pendulum-demo">
+                <div id="pendulum-wrapper">
                     <div id="pendulum-container">
                         <svg id="pendulum-svg" viewBox="0 0 200 200">
                             <circle class="pivot" cx="100" cy="25" r="3"/>
