--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,7 +29,7 @@
     
     <!-- Stylesheets & Scripts -->
     <link rel="stylesheet" href="./Styles/style.css">
-    <script defer src="./Scripts/script.js"></script>
+    <script defer src="./Scripts/gallery.js"></script>
     <script defer src="./Scripts/mobileNav.js"></script>
 </head>
 <body>
@@ -65,6 +65,7 @@
         </div>
 
         <main id="gallery-container">
+            
             <div class="gallery-item">
                 <img src="./Images/sun-earth-moon-geometry.svg" alt="diagram of solar eclipse geometry with sun, moon and earth" class="gallery-item-img" id="gallery-history-page">
                 <a href="./Pages/history.html" class="gallery-page-link" id="test">Read about key<br>Physical Events</a>
@@ -84,7 +85,9 @@
                 <img src="./Images/math-formulas-sketch-handwritten.svg" alt="hand-drawn mathematical formulas with coordinate systems and algebraic equations" class="gallery-item-img" id="gallery-quiz-page">
                 <a href="./Pages/quiz.html" class="gallery-page-link">Test Your<br>Knowledge</a>
             </div>
+
         </main>
+
     </div>   
 </body>
 </html>
