--- a/Pages/gravity.html
+++ b/Pages/gravity.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -103,6 +103,7 @@
             </section>
 
         </main>
+        
     </div>
 </body>
 </html>
