Rename element and add source code for code snippet

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="./Pages/quiz.html">Quiz</a>
     </nav>
 
-    <div id="main-page">
+    <div id="home-page">
 
         <header class="header">
             <nav class="nav-box" id="nav-box-left">
