Add image sources

--- a/Pages/gravity.html
+++ b/Pages/gravity.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="PhysiXplore">
     <meta property="og:locale" content="en_US">
-    <meta property="og:image" content="../Images/og-physixplore.png">
+    <meta property="og:image" content="../Images/physixplore-astronaut-science.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -80,6 +80,7 @@
             </section>
 
             <div id="picture-Newton">
+                 <!-- Image source: https://freesvg.org/1546636880 | License: Public Domain -->
                 <img src="../Images/isaac-newton-physicist-portrait.svg" alt="Isaac Newton portrait engraving with curly wig">
             </div>
 
@@ -97,7 +98,9 @@
             <section class="apple-tree" id="apple-tree1">
                 <h2>Click the apple to fill in the gap!</h2>
                 <div class="tree-wrapper">
+                    <!-- Image source: https://www.flaticon.com/de/kostenloses-icon/baum_490091 | License: Flaticonlizenz -->
                     <img src="../Images/green-tree-cartoon-icon.png" alt="green tree with brown trunk" class="tree">
+                     <!-- Image source: https://www.flaticon.com/de/kostenloses-icon/apfel_5582692?term=apfel&page=1&position=15&origin=search&related_id=5582692 | License: Flaticonlizenz -->
                     <img src="../Images/red-apple-fruit-icon.png" alt="red apple with green leaf" class="apple" id="apple">
                 </div>
             </section>
