--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="PhysiXplore">
     <meta property="og:locale" content="en_US">
-    <meta property="og:image" content="./Images/og-physixplore.png">
+    <meta property="og:image" content="./Images/physixplore-astronaut-science.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -67,22 +67,30 @@
         <main id="gallery-container">
             
             <div class="gallery-item">
-                <img src="./Images/sun-earth-moon-geometry.svg" alt="diagram of solar eclipse geometry with sun, moon and earth" class="gallery-item-img" id="gallery-history-page">
+                <!-- Image source: https://pixabay.com/de/vectors/astronomie-raum-universum-planeten-5829414/ | License: Pixabay-Inhaltslizenz -->
+                <img src="./Images/sun-earth-moon-geometry.svg" alt="diagram of solar eclipse geometry with sun, moon and earth" 
+                    class="gallery-item-img" id="gallery-history-page">
                 <a href="./Pages/history.html" class="gallery-page-link" id="test">Read about key<br>Physical Events</a>
             </div>
 
             <div class="gallery-item">
-                <img src="./Images/isaac-newton-physicist-portrait.svg" alt="Isaac Newton portrait engraving with curly wig" class="gallery-item-img" id="gallery-gravity-page">
+                 <!-- Image source: https://freesvg.org/1546636880 | License: Public Domain -->
+                <img src="./Images/isaac-newton-physicist-portrait.svg" alt="Isaac Newton portrait engraving with curly wig" 
+                    class="gallery-item-img" id="gallery-gravity-page">
                 <a href="./Pages/gravity.html" class="gallery-page-link">Newton's<br>Gravitational Law</a>
             </div>
 
             <div class="gallery-item">
-                <img src="./Images/pendulum-mechanical-clock-physics.svg" alt="Pendulum clock with Roman numerals" class="gallery-item-img" id="gallery-pendulum-page">
+                <!-- Image source: AI generated -->
+                <img src="./Images/pendulum-mechanical-clock-physics.svg" alt="Pendulum clock with Roman numerals" 
+                    class="gallery-item-img" id="gallery-pendulum-page">
                 <a href="./Pages/pendulum.html" class="gallery-page-link">The Pendulum<br>in Motion</a>
             </div>
 
             <div class="gallery-item">
-                <img src="./Images/math-formulas-sketch-handwritten.svg" alt="hand-drawn mathematical formulas with coordinate systems and algebraic equations" class="gallery-item-img" id="gallery-quiz-page">
+                <!-- Image source: https://pixabay.com/de/vectors/mathematik-formel-berechnung-physik-7304235/ | License: Pixabay-Inhaltslizenz -->
+                <img src="./Images/math-formulas-sketch-handwritten.svg" alt="hand-drawn mathematical formulas with coordinate systems and algebraic equations" 
+                    class="gallery-item-img" id="gallery-quiz-page">
                 <a href="./Pages/quiz.html" class="gallery-page-link">Test Your<br>Knowledge</a>
             </div>
 
