--- a/Pages/pendulum.html
+++ b/Pages/pendulum.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="PhysiXplore">
     <meta property="og:locale" content="en_US">
-    <meta property="og:image" content="../Images/og-physixplore.png">
+    <meta property="og:image" content="../Images/physixplore-astronaut-science.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
